{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 1918,
  "lineage": "5e3e15bc-4cb0-131d-a9da-fe8b46c2c926",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6cbecdb258905da",
            "domain": "vpc",
            "id": "eipalloc-0f6cbecdb258905da",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-250-53.compute-1.amazonaws.com",
            "public_ip": "3.228.250.53",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-association1",
            "aws_route_table_association.rt-association2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8c05fd096231fa2",
            "domain": "vpc",
            "id": "eipalloc-0b8c05fd096231fa2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-71-24-121.compute-1.amazonaws.com",
            "public_ip": "52.71.24.121",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-association1",
            "aws_route_table_association.rt-association2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a38b8c18f189761a",
            "arn": "arn:aws:ec2:us-east-1:140403179008:instance/i-0ac8243fc2fc8b351",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac8243fc2fc8b351",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc56cd1d1d4a2236",
            "private_dns": "ip-30-0-1-149.ec2.internal",
            "private_ip": "30.0.1.149",
            "public_dns": "ec2-52-91-57-43.compute-1.amazonaws.com",
            "public_ip": "52.91.57.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01432eeb35f46529b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ef66c8fa107653c",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0930870d872317574"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.bastion",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nessus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:140403179008:instance/i-0d3484e603599edcc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3484e603599edcc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "my-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bbe5c92d698e3fb8",
            "private_dns": "ip-10-0-1-95.ec2.internal",
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-184-72-91-144.compute-1.amazonaws.com",
            "public_ip": "184.72.91.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:140403179008:key/a5398e6c-a8f4-4d72-8f8b-009feff4b815",
                "tags": {
                  "Name": "nessus-root-volume"
                },
                "throughput": 125,
                "volume_id": "vol-0d9a9bc76b72d5bb6",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032d7c84bd5e62e70",
            "tags": {
              "Name": "nessus-scanner"
            },
            "tags_all": {
              "Name": "nessus-scanner"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02abe4c5a991870b1"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.nessus",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wazuh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0718b4ac01274c8cb",
            "arn": "arn:aws:ec2:us-east-1:140403179008:instance/i-010357e09f68667f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010357e09f68667f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "my-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-005808b5249352bf3",
            "private_dns": "ip-30-0-1-197.ec2.internal",
            "private_ip": "30.0.1.197",
            "public_dns": "ec2-54-242-22-27.compute-1.amazonaws.com",
            "public_ip": "54.242.22.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ac4530656653b95c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ef66c8fa107653c",
            "tags": {
              "Name": "Wazuh-Server"
            },
            "tags_all": {
              "Name": "Wazuh-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b43b3150a7dee433"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.wazuh",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:internet-gateway/igw-065ba2629525eb32c",
            "id": "igw-065ba2629525eb32c",
            "owner_id": "140403179008",
            "tags": {
              "Name": "Internet Gateway - Public \u0026 Private VPC"
            },
            "tags_all": {
              "Name": "Internet Gateway - Public \u0026 Private VPC"
            },
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:internet-gateway/igw-09b9941071a66b82e",
            "id": "igw-09b9941071a66b82e",
            "owner_id": "140403179008",
            "tags": {
              "Name": "Nessus IGW"
            },
            "tags_all": {
              "Name": "Nessus IGW"
            },
            "vpc_id": "vpc-0715ef24fb2dfe744"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6cbecdb258905da",
            "connectivity_type": "public",
            "id": "nat-034b4c7675a17ad32",
            "network_interface_id": "eni-015ba2c6837f18d9e",
            "private_ip": "30.0.1.176",
            "public_ip": "3.228.250.53",
            "subnet_id": "subnet-01ef66c8fa107653c",
            "tags": {
              "Name": "Nat-Gateway_1"
            },
            "tags_all": {
              "Name": "Nat-Gateway_1"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-1",
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-association1",
            "aws_route_table_association.rt-association2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8c05fd096231fa2",
            "connectivity_type": "public",
            "id": "nat-0443b50c3e971b68b",
            "network_interface_id": "eni-0367917b9386fe6e8",
            "private_ip": "30.0.2.249",
            "public_ip": "52.71.24.121",
            "subnet_id": "subnet-0a990227112aec439",
            "tags": {
              "Name": "Nat-Gateway_2"
            },
            "tags_all": {
              "Name": "Nat-Gateway_2"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-2",
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-association1",
            "aws_route_table_association.rt-association2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT_Gateway_RT_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:route-table/rtb-03716a20c694812db",
            "id": "rtb-03716a20c694812db",
            "owner_id": "140403179008",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034b4c7675a17ad32",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway-1"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat-Gateway-1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NAT_GATEWAY_1",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-association1",
            "aws_route_table_association.rt-association2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT_Gateway_RT_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:route-table/rtb-08c2bb0ecf1d22b03",
            "id": "rtb-08c2bb0ecf1d22b03",
            "owner_id": "140403179008",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0443b50c3e971b68b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway-2"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat-Gateway-2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NAT_GATEWAY_2",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-association1",
            "aws_route_table_association.rt-association2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:route-table/rtb-0b2b81989065eac95",
            "id": "rtb-0b2b81989065eac95",
            "owner_id": "140403179008",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b9941071a66b82e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nessus Public Route Table"
            },
            "tags_all": {
              "Name": "Nessus Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0715ef24fb2dfe744"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:route-table/rtb-082889d9dfd77bcc1",
            "id": "rtb-082889d9dfd77bcc1",
            "owner_id": "140403179008",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065ba2629525eb32c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Enrutamiento para Internet Gateway"
            },
            "tags_all": {
              "Name": "Enrutamiento para Internet Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat_Gateway_RT_Association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005bbc69b4358b623",
            "route_table_id": "rtb-03716a20c694812db",
            "subnet_id": "subnet-0d5b7ce6eb6a17df1"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NAT_GATEWAY_1",
            "aws_route_table.NAT_Gateway_RT_1",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-association1",
            "aws_route_table_association.rt-association2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat_Gateway_RT_Association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e11ab5e2f9f0f05c",
            "route_table_id": "rtb-08c2bb0ecf1d22b03",
            "subnet_id": "subnet-073882d249b211adc"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NAT_GATEWAY_2",
            "aws_route_table.NAT_Gateway_RT_2",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-association1",
            "aws_route_table_association.rt-association2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet4",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f67c4d37ae70f741",
            "route_table_id": "rtb-0b2b81989065eac95",
            "subnet_id": "subnet-032d7c84bd5e62e70"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a21a0e55731f6215",
            "route_table_id": "rtb-082889d9dfd77bcc1",
            "subnet_id": "subnet-01ef66c8fa107653c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb7b06112923f3e8",
            "route_table_id": "rtb-082889d9dfd77bcc1",
            "subnet_id": "subnet-0a990227112aec439"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "balanceo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:security-group/sg-0760ed4c5c098f73a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0760ed4c5c098f73a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250520155436926900000001",
            "name_prefix": "terraform-",
            "owner_id": "140403179008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Balanceo de carga"
            },
            "tags_all": {
              "Name": "Balanceo de carga"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:security-group/sg-0930870d872317574",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0930870d872317574",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic (for demo purposes)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250520155436933500000002",
            "name_prefix": "terraform-",
            "owner_id": "140403179008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion - allow all traffic"
            },
            "tags_all": {
              "Name": "Bastion - allow all traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nessus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:security-group/sg-02abe4c5a991870b1",
            "description": "Security group for Nessus Essentials",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02abe4c5a991870b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nessus web interface",
                "from_port": 8834,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8834
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nessus-sg",
            "name_prefix": "",
            "owner_id": "140403179008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nessus-sg"
            },
            "tags_all": {
              "Name": "nessus-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0715ef24fb2dfe744"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:security-group/sg-0169617088abed561",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0169617088abed561",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL desde WordPress",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06615bf2f74c64161"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20250520155449872600000004",
            "name_prefix": "terraform-",
            "owner_id": "140403179008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS - solo acceso desde WordPress"
            },
            "tags_all": {
              "Name": "RDS - solo acceso desde WordPress"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.wordpress",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wazuh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:security-group/sg-0b43b3150a7dee433",
            "description": "Security group for Wazuh server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b43b3150a7dee433",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1514,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1514
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1515,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1515
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 55000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55000
              }
            ],
            "name": "wazuh-sg",
            "name_prefix": "",
            "owner_id": "140403179008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wazuh-sg"
            },
            "tags_all": {
              "Name": "wazuh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:security-group/sg-06615bf2f74c64161",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06615bf2f74c64161",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH desde Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0930870d872317574"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250520155443455100000003",
            "name_prefix": "terraform-",
            "owner_id": "140403179008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WordPress - HTTP, HTTPS, SSH desde Bastion"
            },
            "tags_all": {
              "Name": "WordPress - HTTP, HTTPS, SSH desde Bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:subnet/subnet-032d7c84bd5e62e70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032d7c84bd5e62e70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140403179008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nessus Public Subnet"
            },
            "tags_all": {
              "Name": "Nessus Public Subnet"
            },
            "vpc_id": "vpc-0715ef24fb2dfe744"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:subnet/subnet-01ef66c8fa107653c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ef66c8fa107653c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140403179008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Bastion-1"
            },
            "tags_all": {
              "Name": "Subnet-Bastion-1"
            },
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:subnet/subnet-0a990227112aec439",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a990227112aec439",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140403179008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Bastion-2"
            },
            "tags_all": {
              "Name": "Subnet-Bastion-2"
            },
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:subnet/subnet-0d5b7ce6eb6a17df1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "30.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5b7ce6eb6a17df1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140403179008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Wordpress-1"
            },
            "tags_all": {
              "Name": "Subnet-Wordpress-1"
            },
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:subnet/subnet-073882d249b211adc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073882d249b211adc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140403179008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Wordpress-2"
            },
            "tags_all": {
              "Name": "Subnet-Wordpress-2"
            },
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:subnet/subnet-0e1e6d0589f94db7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "30.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1e6d0589f94db7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140403179008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-RDS-1"
            },
            "tags_all": {
              "Name": "Subnet-RDS-1"
            },
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:subnet/subnet-0d8dbef6da3cac98c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8dbef6da3cac98c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140403179008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-RDS-2"
            },
            "tags_all": {
              "Name": "Subnet-RDS-2"
            },
            "vpc_id": "vpc-0ba8b3d60793204e3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:vpc/vpc-0715ef24fb2dfe744",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098d1691e8ccfd2f6",
            "default_route_table_id": "rtb-0a53b0722706b888c",
            "default_security_group_id": "sg-0761b0cb0df2130b1",
            "dhcp_options_id": "dopt-0a58268783b6491cb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0715ef24fb2dfe744",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a53b0722706b888c",
            "owner_id": "140403179008",
            "tags": {
              "Name": "Nessus VPC"
            },
            "tags_all": {
              "Name": "Nessus VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140403179008:vpc/vpc-0ba8b3d60793204e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-03a9b38e3a348c2e6",
            "default_route_table_id": "rtb-06bfe062df41085bd",
            "default_security_group_id": "sg-0d6bfc8f89929c2c5",
            "dhcp_options_id": "dopt-0a58268783b6491cb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ba8b3d60793204e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06bfe062df41085bd",
            "owner_id": "140403179008",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0718b4ac01274c8cb",
            "arn": "arn:aws:ec2:us-east-1:140403179008:instance/i-054e13016b9cb291a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054e13016b9cb291a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0694374ad442ce7a5",
            "private_dns": "ip-30-0-3-23.ec2.internal",
            "private_ip": "30.0.3.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08adaccd211ce008f",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5b7ce6eb6a17df1",
            "tags": {
              "Name": "WordPress Server"
            },
            "tags_all": {
              "Name": "WordPress Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06615bf2f74c64161"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.wordpress",
            "aws_subnet.subnet3",
            "aws_vpc.vpc",
            "data.aws_ami.linux2",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    }
  ]
}